<resources>
    <!-- Splash Screen Strings -->
    <string name="app_name">weather_application</string>
    <string name="splash_1">Planned on biking but now it is raining?</string>
    <string name="splash_2">With Wheelio you can check available bikes right now</string>
    <string name="splash_21">and the weather!</string>
    <string name="splash_loginbt">Already have an account</string>
    <string name="splash_registerbt">Sign up for free</string>
    <string name="logo_description">Bike Logo</string>

    <!-- Login Screen Strings -->
    <string name="back_button">back</string>
    <string name="login_email">email...</string>
    <string name="login_password">password...</string>
    <string name="login_loginbt">Login</string>

    <!-- Register Screen Strings -->
    <string name="register_firstname">first name...</string>
    <string name="register_secondname">last name...</string>
    <string name="register_email">email...</string>
    <string name="register_password">password...</string>
    <string name="register_rgbutton">Register</string>

    <!-- Feed Screen Strings -->
    <string name="feed_logoff">Log Off</string>
    <string name="feed_editprofile">Profile</string>
    <string name="feed_biking">Man on Bike</string>
    <string name="feed_findbike_bt">Find a Bike Near You</string>
    <string name="feed_favorites_bt">Stations</string>
    <string name="feed_temperaturevalue">12°C</string>
    <string name="feed_address">Brazil, SP</string>
    <string name="feed_error">Something went wrong. Try again</string>
    <string name="feed_weatherDescription">Cloudy</string>
    <string name="feed_minTemp">Min Temp: 29°C</string>
    <string name="feed_maxTemp">Max Temp: 80°C</string>
    <string name="feed_imageDescription">maxminTemp</string>
    <string name="feed_dublin">Dublin, IE</string>
    <string name="feed_paris">Lyon, FR</string>
    <string name="feed_profile">Profile</string>

    <!-- Profile Screen Strings -->
    <string name="profile_edit">Save Profile</string>
    <string name="profile_reset_password">Reset Password</string>
    <string name="profile_firstName">First Name</string>
    <string name="profile_secondName">Second Name</string>
    <string name="title_activity_maps_for_bike">Map</string>

    <!-- App Name -->
    <string name="appname">Wheelio</string>
    <string name="title_activity_maps_for_bike_paris">Map</string>

    <!-- RecyclerStationsDublin -->
    <string name="fav_favorites">Favorites</string>
    <string name="fav_description">Details</string>

    <!-- Station Details Screen -->
    <string name="details_name">Name</string>
    <string name="details_status">Status</string>
    <string name="details_bikestands">Available Bike Stands</string>
    <string name="details_bikes">Available Bikes</string>
    <string name="details_latitude">Latitude</string>
    <string name="details_longitude">Longitude</string>
    <string name="title_activity_stations_detail">Map</string>
    <string name="details_add">Add To Favorites</string>

</resources>