<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Splash"
    android:background="@drawable/bg_splash"
    >

    <!-- App Icon PNG -->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="75dp"
        android:layout_height="65dp"
        android:layout_marginBottom="232dp"
        android:contentDescription="@string/logo_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/logo" />

    <!-- Slogan Message TextField -->
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/titillium_web_bold"
        android:text="@string/splash_1"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <!-- App Description TextField -->
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/titillium_web_light"
        android:text="@string/splash_2"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <!-- App Description TextField -->
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/titillium_web_light"
        android:text="@string/splash_21"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <!-- Login Page Button -->
    <Button
        android:id="@+id/splash_loginbt"
        android:layout_width="316dp"
        android:layout_height="47dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/titillium_web_bold"
        android:text="@string/splash_loginbt"
        android:textColor="#000000"
        android:textSize="14sp"
        android:textStyle="bold"
        app:backgroundTint="#E68621"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <!-- Register Page Button -->
    <Button
        android:id="@+id/splash_registerbt"
        android:layout_width="189dp"
        android:layout_height="39dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/titillium_web_bold"
        android:text="@string/splash_registerbt"
        android:textSize="14sp"
        android:textStyle="bold"
        app:backgroundTint="#00FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/splash_loginbt" />
</androidx.constraintlayout.widget.ConstraintLayout>

