<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile"
    android:background="@drawable/app_background">

    <Button
        android:id="@+id/profile_editSave"
        android:layout_width="320dp"
        android:layout_height="51dp"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/titillium_web_bold"
        android:text="@string/profile_edit"
        android:textColor="#000000"
        android:textSize="14sp"
        android:textStyle="bold"
        app:backgroundTint="#FFFFFF"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_SecondNameEdit" />

    <Button
        android:id="@+id/profile_resetPassword"
        android:layout_width="320dp"
        android:layout_height="51dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/titillium_web_bold"
        android:text="@string/profile_reset_password"
        android:textColor="#000000"
        android:textSize="14sp"
        android:textStyle="bold"
        app:backgroundTint="#FFFFFF"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_editSave" />

    <EditText
        android:id="@+id/editText_SecondNameEdit"
        android:layout_width="319dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:autofillHints=""
        android:background="@drawable/round_edittext"
        android:drawableStart="@drawable/sn"
        android:drawableLeft="@drawable/sn"
        android:drawablePadding="5dp"
        android:ems="10"
        android:fontFamily="@font/titillium_web_light"
        android:hint="@string/register_secondname"
        android:inputType="textPersonName"
        android:padding="15dp"
        android:textColor="#777777"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_FirstNameEdit" />

    <EditText
        android:id="@+id/editText_FirstNameEdit"
        android:layout_width="322dp"
        android:layout_height="50dp"
        android:layout_marginTop="72dp"
        android:autofillHints=""
        android:background="@drawable/round_edittext"
        android:drawableStart="@drawable/fn"
        android:drawableLeft="@drawable/fn"
        android:drawablePadding="5dp"
        android:ems="10"
        android:fontFamily="@font/titillium_web_light"
        android:hint="@string/register_firstname"
        android:inputType="textPersonName"
        android:padding="15dp"
        android:textColor="#777777"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icon3" />

    <ImageView
        android:id="@+id/icon3"
        android:layout_width="152dp"
        android:layout_height="123dp"
        android:layout_marginTop="76dp"
        android:contentDescription="@string/logo_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bike" />

    <Button
        android:id="@+id/bt_back3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/titillium_web_bold"
        android:text="@string/back_button"
        android:textSize="14sp"
        android:textStyle="bold"
        app:backgroundTint="#00FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/titillium_web_bold"
        android:text="@string/profile_firstName"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/editText_FirstNameEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.134"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/titillium_web_bold"
        android:text="@string/profile_secondName"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/editText_SecondNameEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.141"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>